<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:visibility="visible">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" >

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/appBarLayout"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#000000"
            android:visibility="visible">

            <TextView
                android:id="@+id/drinkItemNameTV1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/drinkNameView"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/drink_name"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

            <View
                android:id="@+id/drinkNameView"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/priceTV1"
                android:layout_marginRight="5dp"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/priceTV1"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/priceView"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <View
                android:id="@+id/priceView"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/lowTV1"
                android:layout_marginRight="5dp"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/lowTV1"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/lowView"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/todays_low"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <View
                android:id="@+id/lowView"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/highTV1"
                android:layout_marginRight="5dp"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/highTV1"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/highView"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/todays_high"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <View
                android:id="@+id/highView"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/trendTV1"
                android:layout_marginRight="5dp"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/trendTV1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/trend"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewVertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_below="@+id/relativeLayout3"
            android:layout_above="@+id/recyclerViewHorizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:visibility="visible"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:scrollbars="horizontal"
            android:visibility="visible"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>