<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFFFFF" >

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000000"
        android:visibility="gone">

        <TextView
            android:id="@+id/drinkItemNameTV1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/lowTV1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:text="Drink Name"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lowTV1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/highTV1"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:text="Low"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/highTV1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/priceTV1"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:text="High"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/priceTV1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/lowHighIV1"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:text="@string/price"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/lowHighIV1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:background="@drawable/red_arrow_50"
            android:visibility="invisible"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <View
            android:id="@+id/view1"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="#FF0000"/>

        <TextView
            android:id="@+id/drinkCategoryTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/view1"
            android:background="#0000FF"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="Drink Category"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"/>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#000000">

        <TextView
            android:id="@+id/drinkItemNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/drinkNameView"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="left"
            android:text="@string/drink_name"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <View
            android:id="@+id/drinkNameView"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/priceTV"
            android:layout_marginRight="5dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/priceTV"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/priceView"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:text="@string/price"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <View
            android:id="@+id/priceView"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/lowTV"
            android:layout_marginRight="5dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/lowTV"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/lowView"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:text="@string/todays_low"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <View
            android:id="@+id/lowView"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/highTV"
            android:layout_marginRight="5dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/highTV"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/highView"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:text="@string/todays_high"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <View
            android:id="@+id/highView"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/trendRL"
            android:layout_marginRight="5dp"
            android:background="@color/white"/>

        <RelativeLayout
            android:id="@+id/trendRL"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:layout_centerVertical="true" >

            <ImageView
                android:id="@+id/lowHighIV"
                android:layout_width="40dp"
                android:layout_height="40dp" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
